# win-ui

./: .gitignore  CMakeLists.txt
dx12_src/: CMakeLists.txt  commandqueue.cpp  commandqueue.h  depth_stencil.cpp  depth_stencil.h  dx12_layer.h  dx12_window.cpp  dx12_window.h  pipeline_state.cpp  pipeline_state.h  resource.cpp  resource.h  root_signature.cpp  root_signature.h  shader.cpp  shader.h
main_src/: CMakeLists.txt  app.cpp  app.h  app_2.cpp  app_2.h  asset.cpp  asset.h  auxiliary.cpp  auxiliary.h  bitmap.cpp  bitmap.h  cube_render.cpp  cube_render.h  envelope.cpp  envelope.h  fm_synth.cpp  fm_synth.h  fm_synth_win_resource.h  fm_synth_win_resource.rc  main.cpp  midi_manager.cpp  midi_manager.h  mono2d.hlsl  oscillator.cpp  oscillator.h  plot.hlsl  plot_layer.cpp  plot_layer.h  rasterizer.cpp  rasterizer.h  wavefront_loader.cpp  wavefront_loader.h  wavefront_object.cpp  wavefront_object.h
uiapi_src/: CMakeLists.txt  button.cpp  button.h  combobox.cpp  combobox.h  control.cpp  control.h  main.cpp  main.h  static_text.cpp  static_text.h  threaded_window.cpp  threaded_window.h  trackbar.cpp  trackbar.h
